--- a/object-coordinates/src/App.css
+++ b/object-coordinates/src/App.css
@@ -14,11 +14,27 @@
   display: flex;
   flex-direction: column;
   width: 350px;
+  margin-right: 30px;
+}
+
+.form-item {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
 }
 
 .form-group {
   margin: 0;
   margin-bottom: 10px;
+}
+
+.form-group label {
+  display: block;
+  margin-right: 10px;
+  margin-bottom: 5px;
+
+  font-weight: bold;
 }
 
 .form-group textarea {
@@ -30,6 +46,7 @@
 }
 
 .btn {
+  min-width: 30px;
   padding: 6px;
 }
 
