--- a/object-coordinates/src/App.css
+++ b/object-coordinates/src/App.css
@@ -17,7 +17,14 @@
   margin-right: 30px;
 }
 
-.form-item {
+.coordinates-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.coordinates-item {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
