--- a/object-coordinates/src/App.css
+++ b/object-coordinates/src/App.css
@@ -95,7 +95,7 @@
   padding-left: 20px;
 }
 
-.sort-input:checked + .sort-label::before {
+.sort-label::before {
   content: "";
   position: absolute;
   top: 8px;
@@ -105,7 +105,11 @@
 
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  border-top: 10px solid #000000;
+  border-bottom: 10px solid lightgray;
+}
+
+.sort-input:checked + .sort-label::before {
+  border-bottom-color: black;
 }
 
 .result td {
